epub_build_error.txt
   Compiling kartana v0.1.0 (C:\Projects\OwnProjects\Kartana)
warning: unused import: `SpecialCharacter`
  --> src\aozora_parser\block_parser.rs:84:55
   |
84 |     use crate::aozora_parser::parser::{DecoratedText, SpecialCharacter};
   |                                                       ^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `MidashiSize`, `MidashiType`, `Midashi`, and `SingleCommand`
  --> src\aozora_parser\block_parser.rs:86:20
   |
86 |         Alignment, Midashi, MidashiSize, MidashiType, SingleCommand,
   |                    ^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^  ^^^^^^^^^^^^^

warning: unused imports: `AozoraToken`, `TextKind`, and `TextToken`
  --> src\aozora_parser\block_parser.rs:88:43
   |
88 |     use crate::aozora_parser::tokenizer::{AozoraToken, TextToken, TextKind};
   |                                           ^^^^^^^^^^^  ^^^^^^^^^  ^^^^^^^^

warning: unused import: `crate::aozora_parser::block_parser::parse_blocks`
   --> src\aozora_parser\xhtml_generator.rs:304:9
    |
304 |     use crate::aozora_parser::block_parser::parse_blocks;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `AozoraToken`, `TextKind`, `TextToken`, and `self`
   --> src\aozora_parser\xhtml_generator.rs:305:43
    |
305 |     use crate::aozora_parser::tokenizer::{self, AozoraToken, TextToken, TextKind};
    |                                           ^^^^  ^^^^^^^^^^^  ^^^^^^^^^  ^^^^^^^^

warning: unused import: `Cursor`
 --> src\aozora_parser\epub_generator.rs:4:22
  |
4 | use std::io::{Write, Cursor};
  |                      ^^^^^^

warning: unused import: `CommandToken`
 --> src\aozora_parser\parser.rs:3:58
  |
3 | use crate::aozora_parser::tokenizer::{self, AozoraToken, CommandToken, TextToken};
  |                                                          ^^^^^^^^^^^^

warning: unused import: `std::path::PathBuf`
 --> src\editor_page.rs:2:5
  |
2 | use std::path::PathBuf;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> src\top_page\works.rs:6:12
  |
6 |     path::{Path, PathBuf},
  |            ^^^^

error[E0283]: type annotations needed for `FileOptions<'_, _>`
   --> src\aozora_parser\epub_generator.rs:31:13
    |
 31 |         let options = FileOptions::default()
    |             ^^^^^^^   ----------- type must be known at this point
    |
    = note: cannot satisfy `_: FileOptionExtension`
    = help: the following types implement trait `FileOptionExtension`:
              ()
              ExtendedFileOptions
note: required by a bound in `FileOptions`
   --> C:\Users\t4ked\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\zip-7.0.0\src\write.rs:269:31
    |
269 | pub struct FileOptions<'k, T: FileOptionExtension> {
    |                               ^^^^^^^^^^^^^^^^^^^ required by this bound in `FileOptions`
help: consider giving `options` an explicit type, where the type for type parameter `T` is specified
    |
 31 |         let options: FileOptions<'_, T> = FileOptions::default()
    |                    ++++++++++++++++++++

For more information about this error, try `rustc --explain E0283`.
warning: `kartana` (bin "kartana" test) generated 9 warnings
error: could not compile `kartana` (bin "kartana" test) due to 1 previous error; 9 warnings emitted
